--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "jiti": "^2.4.2",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.25.0"
+    "typescript-eslint": "^8.26.0"
   }
 }
