--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 node_modules/
-logs/
-dist/
 coverage/
+.vscode/
+dist/
+logs/
+
+package-lock.json
 
 .env
+.env.local
+.env.development
+.env.test
+.env.production
+
+*.d.ts
